[tool.poetry]
name = "sanction-screening"
version = "0.1.0"
description = "Production-grade Sanction List Screening Tool for compliance"
authors = ["SLST Team <compliance@company.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
rapidfuzz = "^3.0.0"
typer = "^0.9.0"
requests = "^2.31.0"
unidecode = "^1.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
rich = "^13.7.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"